Fix playlist group overflow issue

--- a/src/app/vlogs-home/vlogs-home.component.css
+++ b/src/app/vlogs-home/vlogs-home.component.css
@@ -15,3 +15,8 @@
 .card {
   height: 100%
 }
+
+.playlist-group {
+  overflow: auto;
+  white-space: nowrap;
+}
